    www-data. Closes: #806697
  * Remove ssl work-arounds for MSIE. Newer versions of IE work without them
    and older versions are no longer supported by MS. Closes: #815852
  * Give a hint about systemd in README.multiple-instances. Closes: #818904
  * Don't treat mod_access_compat as essential. It's essentially broken,
    anyway.

 -- Stefan Fritsch <sf@debian.org>  Sat, 09 Jan 2016 23:35:20 +0100

apache2 (2.4.18-1) unstable; urgency=medium

  * New upstream release:
    - mostly HTTP/2 improvements

 -- Stefan Fritsch <sf@debian.org>  Sat, 19 Dec 2015 09:26:14 +0100

apache2 (2.4.17-3) unstable; urgency=medium

  * mpm_prefork: Fix segfault if started with -X. Closes: #805737

 -- Stefan Fritsch <sf@debian.org>  Mon, 23 Nov 2015 19:52:09 +0100

apache2 (2.4.17-2) unstable; urgency=medium

  * Revert REDIRECT_URL to pre-2.4.17 behavior for now. The change broke
    lots of web-apps. Closes: #803353
  * Fix secondary-init-script to not source the main init script with 'set -e'.
    Closes: #803177
  * mod_http2: Write HTTP/2 into THE_REQUEST and the access log.

 -- Stefan Fritsch <sf@debian.org>  Sat, 31 Oct 2015 23:17:11 +0100

apache2 (2.4.17-1) unstable; urgency=medium

  [ Stefan Fritsch ]
  * New upstream release:
    - New experimental http2 module
  * reproducible build: Make symbol sorting consistent over different locales
  * Conflict with apache2.2-common and apache2.2-bin to get the transitional
    packages removed. Closes: #768815
  * Don't treat mpm_itk as MPM module in a2query. Closes: #791902
  * Don't treat mpm_itk as MPM module in deferred actions in postinst.
    Hopefully really closes: #789914
  * Don't treat mpm_itk as MPM module in a2enmod.

  [ Jean-Michel Vourgère ]
  * Updated upstream keyring used to check source authenticity.

 -- Stefan Fritsch <sf@debian.org>  Sat, 24 Oct 2015 22:14:32 +0200

apache2 (2.4.16-3) unstable; urgency=medium

  [ Jean-Michel Vourgère ]