@@ -9,6 +9,7 @@ apache2 (2.4.18-2) UNRELEASED; urgency=medium
   * Give a hint about systemd in README.multiple-instances. Closes: #818904
   * Don't treat mod_access_compat as essential. It's essentially broken,
     anyway.
+  * Merge cross-compile tweaks for debian/rules from ubuntu.
 
  -- Stefan Fritsch <sf@debian.org>  Sat, 09 Jan 2016 23:35:20 +0100
 
